Revision history for App-DBBrowser


2.317    2023-02-00
        - Informix: add 'Epoch_to_DateTime'.
        - Informix add connection attribute 'ix_EnableUTF8'.
        - Pg: add schema 'public' only if db is user-db.
        - Allow nested function.
        - attached_DB.json: save attached databases as hash.
        - Bugfix in 'from_col_by_col'.
        - Bugfix in 'CreateDropAttach'.

2.316    2023-02-19
        - Update parse-mode 'Template'.
        - Update plugins 'mysql', 'MariaDB' and 'Pg'.
        - Informix: use 'table_info'.
        - New method 'prepare_identifier'.

2.315    2023-02-13
        - Added Informix-plugin.
        - Bugfix 'is_system_schema'.
        - Update documentation.
        - Update from_col_by_col, attach_db, alias.
        - Epoch_to_datetime now with fractions of seconds.
        - Bugfix: don't limit table rows in Term::TablePrint.
        - Bugfix join: don't print columns twice.
        - Bugfix default aliases: remove invalid characters.

2.314    2023-02-03
        - New data-structure for subquery file.
        - Refactoring/update Subqueries, Filter, GetContent
        - Bugfix/update filter search_and_replace.
        - Simplified formation info-output.
        - Update sql_limit.

2.313    2023-01-13
        - Bugfix in first_column_is_autoincrement.
        - Update attach/detach SQLite databases.

2.312    2023-01-12
        - Removed option 'auto_limit'.

2.311    2023-01-12
        - SQLite: 'sqlite_'-tables are system tables.
        - No reconnect database after create/drop table.
        - Bugfix in first_column_is_autoincrement.
        - Bugfix in get_join_info.

2.310    2023-01-08
        - Added DB2-plugin.
        - Bugfix import and export options.
        - Sort schemas.
        - Tables-menu: don't separate system tables from the user tables if the schema is a system schema.

2.309    2023-01-06
        - Bugfix regex operator.
        - Update mysql/MariaDB system databases.

2.308    2023-01-03