@@ -4,11 +4,14 @@ Revision history for App-DBBrowser
 2.317    2023-02-00
         - Informix: add 'Epoch_to_DateTime'.
         - Informix add connection attribute 'ix_EnableUTF8'.
+        - New option: DB2 application code set.
         - Pg: add schema 'public' only if db is user-db.
         - Allow nested function.
         - attached_DB.json: save attached databases as hash.
         - Bugfix in 'from_col_by_col'.
         - Bugfix in 'CreateDropAttach'.
+        - Option 'binary_filter': add hexadecimal format.
+        - New option to disable table print warnings.
 
 2.316    2023-02-19
         - Update parse-mode 'Template'.
